# research-assistant-ozy

./: .gitignore  FOLLOWUPS.md  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: defender.md
.claude/hooks/: session_start.py
.claude/skills/: brief.md  probe.md  research.md  trace.md
.omc/: phase-3.5-isolation-spike-RESULT.md
.research/: watchlist.txt
prompts/research-v1.0.0/: DERIVATION.md  probe.txt  stage_1_filter.txt  stage_2_note.txt  stage_2_skeptic_check.txt  (+3 more)
research_assistant/: __main__.py  brief.py  claude_sdk.py  cli.py  composite.py  data_loader.py  dossier_io.py  edgar.py  market_context.py  null_state_manager.py  observations.py  orchestrator.py  prompts.py  quality_contract.py  trace_renderer.py  universe.py
tests/: test_alert_journal.py  test_brief.py  test_brief_screener_injection.py  test_brief_setups_render.py  test_cli.py  test_cli_alerts_review.py  test_cmd_brief_helpers.py  test_cmd_brief_screener_invocation.py  test_composite.py  test_data_loader.py  test_defender_heuristic.py  test_dossier_io.py  test_edgar.py  test_edgar_13f.py  test_filing_excerpts.py  test_import_boundaries.py  test_insider_injection.py  test_isolation_contract.py  test_null_state_manager.py  test_observations.py  test_outcome_tracker.py  test_probe.py  test_prompt_fork_hygiene.py  test_quality_contract.py  test_screener_pipeline.py  test_screener_sector_rotation.py  test_session_start_hook.py  test_stage2_journal.py  test_stage_2_note.py  test_stage_2_skeptic.py  test_trace_renderer.py  test_universe.py
(+14 files in other folders)
