[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "research-assistant"
version = "0.1.0"
description = "CC-native stock research assistant — bias-resilient research over Ozymandias intelligence modules"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "python-frontmatter>=1.1.0",
    # lxml backs Ozy universe_fetcher's S&P 500 / Nasdaq 100 source
    # (pandas.read_html). Source B silently degrades without it.
    "lxml>=5.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["research_assistant*"]
exclude = ["tests*", ".research*", ".claude*"]
